Before large changes of RightPriorityNode